add "add book" functionality + local storage

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <div id="body">
         <button id="modalBtn">Add Book</button>
         <div class="modal">
-            <div class="modal-content">
-              <span class="close-btn">&#10005;</span>
+            <div class="modalContent">
+              <span class="closeBtn">&#10005;</span>
+                <form class="bookForm">
                     <label for="bookTitle">Title</label>
                     <input type="text" name="bookTitle" id="bookTitle">
                     <label for="bookAuthor">Author</label>
@@ -31,9 +32,9 @@
             </div>
         </div>
         <div class="books">
-        <div class="card">
+            <div class="cards">
 
-        </div>
+            </div>
         </div>
     </div>
     <div id="footer">
