add full functionality including add book form inputs, library index, delete button, and read status toggle

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
                     <label for="bookAuthor">Author</label>
                     <input type="text" name="bookAuthor" id="bookAuthor">
                     <label for="bookPages"># of Pages</label>
-                    <input type="number" name="pages" id="pages">
-                    <label for="readStatus">Have you read it?</label>
-                    <input type="checkbox" name="readStatus" id="readStatus">
+                    <input type="number" name="bookPages" id="bookPages">
+                    <label for="bookReadStatus">Have you read it?</label>
+                    <input type="radio" name="bookReadStatus" id="yes" value="yes">yes
+                    <input type="radio" name="bookReadStatus" id="no" value="no">no
                     <button type="submit">Add book to Library</button>
                 </form>
             </div>
